--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
 # requirements.txt
-
-# Basic Prototype
-python>=3.7
-
-# lemme check and see how/where/why we would need to implement these
-
-# For Data Visualization
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# For Data Manipulation and Persistence
-pandas==2.0.3
-# numpy==1.25.2
+pandas>=1.3.0
+numpy>=1.20.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+reportlab>=3.6.0
+xlsxwriter>=3.0.0
